<resources>
    <string name="app_name">Buddy</string>
    <string name="load">SCHEDULING EXAM</string>
    <string name="schedule_button">SCHEDULE EXAM</string>
    <string name="b_schedule">BUTTON</string>
    <string name="b_set_schedule">SET SCHEDULE</string>
    <string name="b_show_schedule">SHOW SCHEDULE</string>
    <string name="b_drive"> G DRIVE</string>
    <string name="drive_link">https://gogreenmca.page.link/drive</string>
    <string name="b_ttable">TIMETABLE</string>
    <string name="t_poweredby">Powered by © BossCorp™</string>
    <string name="t_welcome1">Hey</string>
    <string name="t_welcome2">Buddy !</string>
    <string name="t_company">BossCorp™</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_ttable">Time Table</string>
    <string name="nav_about">About</string>
    <string name="nav_contact">Contact Us</string>
    <string name="abt_for_by">\"For the students, By the students.\"</string>
    <string name="about_content">Buddy was created by Mohammed Shabeer and Suraj Suresh of Integrated MCA 2016
        of Amrita School of Arts and Sciences, Kochi as part of their Minor Project during the academic year 2018 - 2019.
        The main feature of the application is to remotely add the examination timetable to the user\'s Google Calendar and thereby generating reminders about the exam. The application will display details of important events such as project and assignment submissions,
        test papers e.t.c and other announcements as notifications provided, the device need to be connected to the internet.
    </string>
    <string name="contact_content">Contact Us at:</string>
    <string name="contact_email">incorporatedboss@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>

    <string name="back_exit">PRESS AGAIN TO EXIT</string>
    <string name="loading">Take a Deep Breath …</string>

    <string name="connection_error">No network connection available</string>
    <string name="connection_failed">FAILED TO CONNECT TO INTERNET</string>
    <string name="app_fetch_error">Failed To Fetch Data, Please Reload App Again</string>
    <string name="event_retrieved">Events Retrieved</string>
    <string name="app_access_request">This app needs to access your Google account (via Contacts).</string>
    <string name="google_play_require">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>

    <string name="event_loc">AMRITA SCHOOL OF ARTS AND SCIENCES,KOCHI</string>
    <string name="event_set_successfull">Event Update Succeeded</string>
    <string name="event_set_not_successfull">Request Failed</string>
    <string name="error_occured">The following error occurred:</string>


    //------------------Shared preferences----------------------//
    <string name="StoredValue">0</string>
    <string name="DefaultValue">0</string>
    //-----------------------------------------------------------//
    //------------------CLOUD MESSAGING--------------------------------//
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>


    //------------------CLOUD MESSAGING--------------------------------//
</resources>



