<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".About">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/chewy"
        android:gravity="center_horizontal"
        android:text="@string/t_welcome2"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/abt_for_by"
        android:textColor="@color/colorPrimary"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="362dp"
        android:layout_height="475dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/caveat_bold"
        android:text="@string/about_content"
        android:textColor="@color/colorPrimary"
        android:textSize="23sp"
        android:textStyle="bold" />

</android.widget.RelativeLayout>