<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainMenu"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/b_shedule"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="71dp"
        android:background="@drawable/button_design1"
        android:shadowColor="#1a248f"
        android:shadowRadius="5"
        android:text="@string/b_schedule"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/b_timetable"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_shedule"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_design1"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/b_ttable"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/b_gdrive"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_timetable"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_design1"
        android:shadowColor="#A8A8A8"
        android:shadowRadius="5"
        android:text="@string/b_drive"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>